--- a/frontend/core/src/main/webapp/static/app/lists/listListItem.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItem.html
@@ -1,4 +1,4 @@
-<div class="group-mixed">
+<div class="group-mixed vertically-centered">
   <div class="group-mixed--left">
     <a href ng-class="onboardingInProgress && 'link-disable'" ng-click="changeFeature('list', list, true)">
       <span class="text-navigation-back large"></span>
