--- a/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
@@ -1,4 +1,4 @@
-<form role="form" class="group-mixed swiper-no-swiping" ng-submit="callAndExit(saveList, newItem)"
+<form role="form" class="group-mixed vertically-centered swiper-no-swiping" ng-submit="callAndExit(saveList, newItem)"
 data-snap-ignore="true" autocapitalize="none" autocorrect="off" editable-field-container
 editable-field-container-clicked-elsewhere="clickedElsewhere()">
   <div class="group-mixed--left">
