--- a/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteListItem.html
@@ -1,7 +1,10 @@
-<div class="group-mixed with-teaser">
+<div class="group-mixed with-checkbox">
   <div class="group-mixed--middle">
     <a href class="link-list-item" swiper-click="callAndWaitThenScroll(openNoteEditor, note)">
       <span class="text-heading-primary" ng-bind="note.title" clamp=2></span>
+    </a>
+    <a href ng-if="note.content" class="link-teaser" swiper-click="callAndWaitThenScroll(openNoteEditorView, note)">
+      <span class="text-teaser" clamp=3 ng-bind="getNoteContentTeaser(note)"></span>
     </a>
   </div>
   <div ng-if="note.transientProperties.favorited" class="group-mixed--right">
@@ -10,6 +13,3 @@
     </a>
   </div>
 </div>
-<a href class="group-teaser link-teaser" swiper-click="callAndWaitThenScroll(openNoteEditorView, note)">
-  <span class="text-teaser" clamp=3 ng-bind="getNoteContentTeaser(note)"></span>
-</a>
