--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -5,7 +5,7 @@
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endNoteEdit()" >
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() && !note.deleted ? 'save' : 'back'"></span>
         </a>
-        <div ng-hide="onboardingInProgress" ng-if="mode === 'fullScreen'" class="group-symmetrical--middle width-large">
+        <div ng-hide="onboardingInProgress" ng-if="mode === 'fullScreen'" class="group-symmetrical--middle width-large animate-fade-in-out">
           <a href ng-class="link-navigation" ng-click="toggleNoteEditMode()">
             <span class="text-navigation downplayed">note settings</span>
           </a>
@@ -51,6 +51,12 @@
               </a>
             </div>
 
+            <!-- URL -->
+            <div ng-hide="mode === 'fullScreen'" class="row-vertically-centered with-textarea">
+              <textarea type="text" ng-model="note.link" msd-elastic maxlength="128" placeholder="enter url&#8230;">
+              </textarea>
+            </div>
+
             <!-- CONTENT -->
             <div class="row-vertically-centered with-textarea">
               <textarea ng-class="(!isOnboarded('notes') && checkListOnboardingLock('notes', 'on') && !hideNoteTitle) && 'input-separate'" ng-model="note.content" msd-elastic placeholder="enter content&#8230;"
@@ -66,7 +72,7 @@
           </div>
         </div>
 
-        <footer ng-hide="isNoteFooterHidden()" class="container-content--after editor-footer">
+        <footer ng-hide="isNoteFooterHidden()" class="container-content--after editor-footer animate-fade-in-out">
           <nav role="navigation" class="swiper-no-swiping group-symmetrical">
             <a href ng-hide="onboardingInProgress" ng-click="clickFavorite()" class="group-symmetrical--left">
               <span class="text-star" ng-class="!note.transientProperties.favorited && 'inactive'"></span>
@@ -83,12 +89,12 @@
         swiper-prevent>
 
           <!-- KEYWORDS -->
-          <form ng-hide="urlFocused" role="form" class="row-form" autocapitalize="none" autocorrect="off" ng-submit="addNewKeywordToNote(note, newKeyword)">
+          <form role="form" class="row-form" autocapitalize="none" autocorrect="off" ng-submit="addNewKeywordToNote(note, newKeyword)">
             <input type="text" ng-model="newKeyword.title" placeholder="add keyword&#8230;" maxlength="128">
           </form>
           <span class="text-details row" ng-if="newKeyword.title" class="row" clamp=2>hit enter to create #{{newKeyword.title}}</span>
 
-          <div ng-hide="urlFocused" ng-if="noteHasKeywords(note)" class="keywords-container row">
+          <div ng-if="noteHasKeywords(note)" class="keywords-container row">
             <div class="keyword-wrapper" ng-repeat="keyword in note.transientProperties.keywords | orderBy:'title'">
               <a href class="keyword highlighted" ng-click="removeKeywordFromNote(note, keyword)">
                 <span class="text-keyword" ng-bind="'#' + keyword.title" clamp=1></span>
@@ -96,18 +102,12 @@
             </div>
           </div>
 
-          <div ng-if="!urlFocused && keywords" class="keywords-container row">
+          <div ng-if="keywords" class="keywords-container row">
             <div class="keyword-wrapper" ng-repeat="keyword in keywords | keywordsFilter:{name:'byOtherThanNoteKeywords', item: note} | filter:newKeyword.title | orderBy:'title'">
               <a href class="keyword" ng-click="addKeywordToNote(note, keyword)">
                 <span class="text-keyword" ng-bind="'#' + keyword.title" clamp=1></span>
               </a>
             </div>
-          </div>
-
-          <div class="row-vertically-centered with-textarea">
-            <textarea type="text" ng-model="note.link" ng-focus="setUrlFocus(true)" ng-blur="setUrlFocus(false)"
-            msd-elastic maxlength="128" placeholder="enter url&#8230;">
-            </textarea>
           </div>
 
         </div>
