Aligned lists in menu.

--- a/frontend/core/src/main/webapp/static/app/main/menu.html
+++ b/frontend/core/src/main/webapp/static/app/main/menu.html
@@ -26,7 +26,7 @@
       <span class="text-navigation-menu">lists</span>
     </a>
 
-    <div ng-if="isFeatureActive('list')" class="group-mixed">
+    <div ng-if="isFeatureActive('list')" class="group-mixed small with-checkbox">
       <div class="group-mixed--middle">
         <a href class="link-menu-small highlighted" ng-click="gotoFeature('list', getActiveList())">
           <span class="text-navigation-menu-small" clamp=2 ng-bind="getActiveList().title"></span>
@@ -38,7 +38,7 @@
         </a>
       </div>
     </div>
-    <div ng-if="favoriteLists.length > 0" class="group-mixed" ng-repeat="favoriteList in favoriteLists"
+    <div ng-if="favoriteLists.length > 0" class="group-mixed small with-checkbox" ng-repeat="favoriteList in favoriteLists"
     ng-hide="favoriteList === getActiveList()">
       <div class="group-mixed--middle">
         <a href class="link-menu-small" ng-click="gotoFeature('list', favoriteList)">
