Fixed error messages on forgot password page

--- a/frontend/core/src/main/webapp/static/app/entry/entryDetails.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryDetails.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="group-error height-large row-form">
-        <span ng-if="sendFailed" class="text-error">you are not an extended mind user</span>
+        <span ng-if="sendFailed" class="text-error">no users found with given email</span>
         <span ng-if="entryOffline" class="text-error">can't connect to server. are you online?</span>
       </div>
     </div>
