--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -53,15 +53,19 @@
       </div>
 
       <!-- EXPANDABLE FOOTER CONTENT -->
-      <div ng-if="footerExpanded" class="keywords-footer row" ng-class="{'keywords-select-active': selectedKeywords && selectedKeywords.length}" ng-init="clearSelectedKeywords()">
+      <div ng-if="footerExpanded" class="keywords-footer" ng-class="{'keywords-select-active': selectedKeywords && selectedKeywords.length}" ng-init="clearSelectedKeywords()">
 
         <!-- KEYWORDS -->
-
-        <div ng-hide="selectedKeywords && selectedKeywords.length" class="keywords-search">
-          <input type="search" class="text-keyword" ng-model="keywordsSearch.text" placeholder="search keywords&#8230;" maxlength="128" autocapitalize="none" autocorrect="off">
+        <div ng-hide="selectedKeywords && selectedKeywords.length" class="group-mixed keywords-search">
+          <div class="group-mixed--middle">
+            <input type="search" class="text-keyword" ng-model="keywordsSearch.text" placeholder="search keywords&#8230;" maxlength="128" autocapitalize="none" autocorrect="off">
+          </div>
+          <a href class="group-mixed--right highlighted" ng-click="toggleExpandFooterToMaxHeight()">
+            <span class="text-edit" ng-bind="footerExpandedToMaxHeight ? 'done' : 'edit'"></span>
+          </a>
         </div>
 
-        <div ng-if="selectedKeywords && selectedKeywords.length" class="keywords-container">
+        <div ng-if="selectedKeywords && selectedKeywords.length" class="keywords-container row">
           <div class="keyword-wrapper" ng-repeat="keyword in selectedKeywords">
             <a href class="keyword highlighted" ng-click="unselectKeyword(keyword)">
               <span class="text-keyword" ng-bind="'#' + keyword.title" clamp=1></span>
@@ -69,9 +73,9 @@
           </div>
         </div>
 
-        <div class="keywords-container">
+        <div class="keywords-container row">
           <div class="keyword-wrapper" ng-repeat="keyword in filteredItems.unselectedKeywords = (keywords | filter:unselectedKeywordsFromItemsWithSelectedKeywords) | filter:{title:keywordsSearch.text} | orderBy:'title'">
-            <a href class="keyword" ng-click="selectKeyword(keyword)">
+            <a href class="keyword" ng-click="footerExpandedToMaxHeight ? initializeEditor('tag', keyword) : selectKeyword(keyword)">
               <span class="text-keyword" ng-bind="'#' + keyword.title" clamp=1></span>
             </a>
           </div>
