--- a/frontend/core/src/main/webapp/static/app/tasks/taskListCompleted.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListCompleted.html
@@ -1,4 +1,4 @@
 <button class="btn animate-btn-completed" ng-if="!isCompletedDisabled() && containsCompleted()"
-ng-click="toggleShowCompletedTasks()">
+ng-click="toggleShowCompletedTasks()" ng-class="showCompletedTasks && 'active'">
   <span class="text-toggle-completed"></span>
 </button>
