--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -10,7 +10,24 @@
   <meta name="msapplication-tap-highlight" content="no" />
   <title>extended mind</title>
   <link rel="stylesheet" href="/static/${project.version}/css/em.css"/>
-  <link rel="shortcut icon" href="/static/${project.version}/favicon.ico"/>
+  <link rel="apple-touch-icon" sizes="57x57" href="/static/${project.version}/favicon/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/static/${project.version}/favicon/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/static/${project.version}/favicon/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/static/${project.version}/favicon/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/static/${project.version}/favicon/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/static/${project.version}/favicon/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/static/${project.version}/favicon/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/static/${project.version}/favicon/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/${project.version}/favicon/apple-touch-icon-180x180.png">
+  <meta name="apple-mobile-web-app-title" content="extended mind">
+  <link rel="icon" type="image/png" href="/static/${project.version}/favicon/favicon-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="/static/${project.version}/favicon/favicon-160x160.png" sizes="160x160">
+  <link rel="icon" type="image/png" href="/static/${project.version}/favicon/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="/static/${project.version}/favicon/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="/static/${project.version}/favicon/favicon-32x32.png" sizes="32x32">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="msapplication-TileImage" content="/static/${project.version}/favicon/mstile-144x144.png">
+  <meta name="application-name" content="extended mind">
   <script>
     var packaging = "web";
     var version = "${project.version}";
