Fixed text vertical positioning in add new list during onboarging.

--- a/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItemAdd.html
@@ -2,10 +2,9 @@
 data-snap-ignore="true" autocapitalize="none" autocorrect="off" editable-field-container
 editable-field-container-clicked-elsewhere="clickedElsewhere()">
   <div class="group-mixed--left">
-    <a href ng-hide="onboardingInProgress" ng-click="callAndExit(saveListAndChangeFeature, newItem)">
+    <a href ng-click="!onboardingInProgress ? callAndExit(saveListAndChangeFeature, newItem) : undefined">
       <span class="text-navigation-back large"></span>
     </a>
-    <div href ng-show="onboardingInProgress"><span class="text-navigation-back large"></span></div>
   </div>
   <div class="group-mixed--middle">
     <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
