Fixed "Controller 'list', required by directive 'listItem', can't be found!", https://docs.angularjs.org/error/$compile/ctreq. List items are now hidden by default in focus tasks, because they use a custom filter which may not yet be registered into list directive. 'list' directive is no longer optionally required by 'listItem'.

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -312,7 +312,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/rightDuplicate" slide-index="0" swiper-slide-duplicate="true">
           <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
-          list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate" list-order="top">
+          list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate" list-order="top" list-hide-item-default>
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -337,7 +337,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1" swiper-slide-loop-start="true">
           <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
-          list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate" list-order="top">
+          list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate" list-order="top" list-hide-item-default>
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -363,7 +363,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
           <div class="container-content" ng-class="daySlides[1].pastDate && 'past-date'"
-          list="tasks | tasksByDate:daySlides[1].info:daySlides[1].pastDate" list-order="top">
+          list="tasks | tasksByDate:daySlides[1].info:daySlides[1].pastDate" list-order="top" list-hide-item-default>
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -389,7 +389,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
           <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
-          list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate" list-order="top">
+          list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate" list-order="top" list-hide-item-default>
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -415,7 +415,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/leftDuplicate" slide-index="4" swiper-slide-duplicate="true">
           <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
-          list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate" list-order="top">
+          list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate" list-order="top" list-hide-item-default>
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
