--- a/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksRecent.html
@@ -20,11 +20,13 @@
       <h2 class="group-heading instruction row">what do you want to
         <span class="highlighted">get done?</span>
       </h2>
-      <div class="textgroup-ingress row">add a <span class="text-highlighted">task</span> by clicking the plus sign below</div>
+      <div class="textgroup-ingress row">add a <span class="text-highlighted">task</span> by clicking the
+      plus sign below</div>
     </div>
     <div ng-if="!isOnboarded('tasks') && checkListOnboardingLock('tasks', 'off')" class="group-instruction">
-      <h2 class="group-heading instruction row"><span ng-if="isOneOnboardingItemCreated('tasks')">first</span>
-        <span class="highlighted">task</span> created!
+      <h2 class="group-heading instruction row">
+        <span ng-if="isOneOnboardingItemCreated('tasks')">first</span> <span class="highlighted">task</span>
+        created!
       </h2>
       <div class="textgroup-ingress row">go to <span class="text-highlighted">notes</span> by clicking
       the menu icon in the top-left corner</div>
